patch task endpoint
