# entities/patch_task_dto.go
@@ -4,13 +4,12 @@ import (
 	"time"
 )
 
-type GetTaskDto struct {
+type PatchTaskDto struct {
 	ID int `json:"id"`
-	Name string `json:"name"`
+	Name *string `json:"name,omitempty"`
 	Description *string `json:"description,omitempty"`
 	Status *string `json:"status,omitempty"`
 	Deadline *time.Time `json:"deadline,omitempty"`
-	Tags []Tag `json:"tags,omitempty"`
+	Tags []Tag `gorm:"many2many:task_tags" json:"tags,omitempty"`
 	Weather *string `json:"weather,omitempty"`
-	UserID uint `json:"user_id"`
 }
