# openapi.yaml
@@ -38,6 +38,30 @@ paths:
                     type: integer
         "500":
           $ref: "#/components/errors/InternalServerError"
+  /tasks/{id}:
+    patch:
+      summary: Patch task
+      operationId: patchTask
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GetTaskDto" 
+        "404":
+          description: Task not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        "500":
+          $ref: "#/components/errors/InternalServerError"
 components:
   schemas:
     GetTaskDto:
